--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,12 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@styles": ["./src/styles"],
+      "@components": ["./src/components"],
+      "@actions": ["./src/actions"],
+      "@utils": ["./src/utils"],
+      "@hooks": ["./src/hooks"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
